# polyviz

./: .gitignore  README.md  index.html  package-lock.json  package.json
python/: README.md  main.py  pyproject.toml
python/examples/: demo.py
python/src/polynomial_explorer/: __init__.py  __main__.py  analysis.py  explorer.py  parser.py  visualization.py
src/: App.tsx  index.css
src/components/: AnalysisPanel.tsx  CoefficientEditor.tsx  InteractiveGraph.tsx  PolynomialInput.tsx  QuickExamples.tsx  StepByStep.tsx
src/utils/: polynomial.ts
