[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polynomial-explorer"
version = "0.1.0"
description = "An educational tool to deeply explore polynomials: roots, multiplicity, end behavior, and turning points."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "sympy>=1.12",
    "matplotlib>=3.7",
]

[project.scripts]
poly-explore = "polynomial_explorer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
